--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "14.0.4+sha-76c0e9c",
+  "version": "14.0.4+sha-76c0e9c-with-local-changes",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
